tests/typing/pass/arith_eq.crs
fn main() {
    var b: i32 = 2;
    var a: bool = 2 * b == 4;
}
