tests/typing/fail/read_uninitialized_var.crs
fn test() i32 {
    var a : i32;
    return a;
}